--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },  
   "description": "Extension to format print a CSV file with variety of filtering options.",
   "version": "0.0.1",
+  "icon": "logo.svg",
   "engines": {
     "vscode": "^1.98.0"
   },
